tests/compile-fail/word_on_wrong_variant_type.rs
use darling::FromMeta;

#[derive(Debug, FromMeta, PartialEq, Eq)]
enum Meta {
    Unit,
    #[darling(word)]
    NotUnit(String)
}

fn main() {}
